// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pseudo before/after 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, create(\\"div\\", {}, \\"Hello\\"));

Styles.include(\`
	.element_26b::before { content: \\"This is content\\"; color: blue }
	.element_26b::after { background: red; color: white; content: \\"\\" }
\`);"
`;

exports[`pseudo before/after 2`] = `
"() => <div className=\\"element_26b\\"><div>Hello</div></div>;

Styles.include(\`
	.element_26b::before { content: \\"This is content\\"; color: blue }
	.element_26b::after { background: red; color: white; content: \\"\\" }
\`);"
`;

exports[`pseudo nthOfType 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"element_26b\\"
}, create(\\"div\\", {}, \\"Hello\\"));

Styles.include(\`
	.element_26b:nth-of-type(2n) { color: blue }
	.element_26b:nth-of-type(3n+2) { color: red }
\`);"
`;

exports[`pseudo nthOfType 2`] = `
"() => <div className=\\"element_26b\\"><div>Hello</div></div>;

Styles.include(\`
	.element_26b:nth-of-type(2n) { color: blue }
	.element_26b:nth-of-type(3n+2) { color: red }
\`);"
`;
